tweak design
